<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/experience_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <RelativeLayout
            android:id="@+id/activity_experience_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="ch.fhnw.ip5.emotionhunt.activities.ExperienceDetailActivity">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="179dp"
                    app:srcCompat="@drawable/img_experience_example"
                    android:id="@+id/imageView3"
                    android:layout_marginBottom="16dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp">

                    <TextView
                        android:text="@string/please_do_yur_dishes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/text_experience_detail_comment"
                        android:layout_weight="1" />

                    <TextView
                        android:text="@string/mark_as_spam"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/text_experience_detail_spam"
                        android:layout_weight="1"
                        android:textStyle="normal|italic"
                        android:textAlignment="viewEnd" />
                </LinearLayout>

                <TextView
                    android:text="@string/reactions"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:id="@+id/text_experience_detail_reaction"
                    android:textSize="24sp"
                    android:textStyle="normal|bold"
                    android:textAlignment="viewStart" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include layout="@layout/activity_experience_detail_reaction_item"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"></include>

                </HorizontalScrollView>
            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>